/*
 * This file is part of Bisq.
 *
 * Bisq is free software: you can redistribute it and/or modify it
 * under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or (at
 * your option) any later version.
 *
 * Bisq is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE. See the GNU Affero General Public
 * License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with Bisq. If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package notifications;
option java_package = "bisq.notifications.protobuf";
option java_multiple_files = true;

enum MobileDevicePlatform {
  DEVICEREGISTRATIONPLATFORM_UNSPECIFIED = 0;
  DEVICEREGISTRATIONPLATFORM_IOS = 1;
  DEVICEREGISTRATIONPLATFORM_ANDROID = 2;
}
message MobileDeviceProfile {
  string deviceId = 1;
  string deviceToken = 2;
  string publicKeyBase64 = 3;
  string deviceDescriptor = 4;
  MobileDevicePlatform platform = 5;
}

message DeviceRegistrationStore {
  map<string, MobileDeviceProfile> deviceByDeviceId = 1;
}